tests/snapshots/run_wpt_conformance__onnx_reduceMean_float16_3D_tensor_options_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_mean.https.any.js",
    "reduceMean float16 3D tensor options.axes",
    "onnx",
    "PASS",
)
